issue 4512 evolve idle: refactor and tests